Handle webkit canvas clipping bug: https://bugs.webkit.org/show_bug.cgi?id=68196

--- a/fizzbreaker/static-files/css/style.css
+++ b/fizzbreaker/static-files/css/style.css
@@ -90,6 +90,10 @@ p.noCanvas {
   overflow: hidden;
   border: 3px solid #add8e6;
 }
+.porthole.noclip {
+  border-radius: 0;
+  border: none;
+}
 img {
   position: absolute;
   max-width:100%;
